src/error
syntax_tree.c: In function ‘createTreeNode’:
syntax_tree.c:10:2: error: ‘for’ loop initial declarations are only allowed in C99 mode
  for (int i = 0; i < p->arity; i ++){
  ^
syntax_tree.c:10:2: note: use option -std=c99 or -std=gnu99 to compile your code
syntax_tree.c:11:36: error: expected expression before ‘TreeNode’
   TreeNode *temp = va_arg(arg_ptr, TreeNode *);
                                    ^
syntax_tree.c: In function ‘printTree’:
syntax_tree.c:43:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i = 0; i < p->arity; i++){
   ^
make: *** [all] Error 1
